--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,12 @@
     "node": "8"
   },
   "dependencies": {
+    "actions-on-google": "^2.9.1",
+    "cheerio": "^1.0.0-rc.3",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0"
+    "firebase-functions": "^3.1.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
