--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.0.0-rc.3",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
+    "html-to-text": "^5.1.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
